<resources>
    <string name="app_name">CustomerApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_cart_item">Remove</string>
    <string name="pending">Pending</string>
    <string name="preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="delivered">Delivered</string>
    <string name="refresh">refresh</string>
    <string name="sent_to_kitchen">Sent to Kitchen</string>
</resources>
